[gd_scene load_steps=10 format=2]

[ext_resource path="res://master.gd" type="Script" id=1]
[ext_resource path="res://singleboxes.gd" type="Script" id=2]
[ext_resource path="res://CSGBox.gd" type="Script" id=3]
[ext_resource path="res://TextEdit.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="Environment" id=3]
background_mode = 1
background_color = Color( 0.576471, 0.564706, 0.592157, 1 )

[sub_resource type="GDScript" id=1]
script/source = "extends Camera


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="SpatialMaterial" id=4]
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=5]
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
material_override = SubResource( 2 )
width = 1.0
height = 1.0
depth = 1.0
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 135 )
environment = SubResource( 3 )
current = true
near = 0.01
far = 8192.0
script = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="CSGBox"]

[node name="Control" type="Control" parent="."]
margin_left = 27.0
margin_right = 67.0
margin_bottom = 40.0

[node name="newboxbutton" type="Button" parent="Control"]
anchor_right = 1.581
anchor_bottom = 1.911
margin_left = 126.0
margin_top = 60.0
margin_right = 127.76
margin_bottom = 18.56
text = "new box"

[node name="x" type="HScrollBar" parent="Control"]
margin_left = 262.0
margin_top = 110.0
margin_right = 462.0
margin_bottom = 135.0
min_value = -50.0
max_value = 50.0
value = 1.0

[node name="xn" type="SpinBox" parent="Control/x"]
margin_left = -73.0
margin_right = 1.0
margin_bottom = 25.0
min_value = -50.0
max_value = 50.0

[node name="xnt" type="LineEdit" parent="Control/x"]
margin_left = -134.0
margin_right = -74.0
margin_bottom = 25.0
text = "Panorering"
editable = false

[node name="y" type="HScrollBar" parent="Control"]
margin_left = 262.0
margin_top = 140.0
margin_right = 462.0
margin_bottom = 165.0
min_value = -50.0
max_value = 50.0
value = 1.0

[node name="yn" type="SpinBox" parent="Control/y"]
margin_left = -73.0
margin_right = 1.0
margin_bottom = 25.0
min_value = -50.0
max_value = 50.0

[node name="ynt" type="LineEdit" parent="Control/y"]
margin_left = -134.0
margin_right = -74.0
margin_bottom = 25.0
text = "Hz"
editable = false

[node name="z" type="HScrollBar" parent="Control"]
margin_left = 262.0
margin_top = 170.0
margin_right = 462.0
margin_bottom = 195.0
min_value = -50.0
max_value = 50.0
value = 1.0

[node name="zn" type="SpinBox" parent="Control/z"]
margin_left = -73.0
margin_right = 1.0
margin_bottom = 25.0
min_value = -50.0
max_value = 50.0

[node name="znt" type="LineEdit" parent="Control/z"]
margin_left = -134.0
margin_right = -74.0
margin_bottom = 25.0
text = "Dybde"
editable = false

[node name="width" type="HScrollBar" parent="Control"]
margin_left = 263.0
margin_top = 218.0
margin_right = 463.0
margin_bottom = 243.0
value = 10.0

[node name="wn" type="SpinBox" parent="Control/width"]
margin_left = -73.0
margin_right = 1.0
margin_bottom = 25.0

[node name="wnt" type="LineEdit" parent="Control/width"]
margin_left = -134.0
margin_right = -74.0
margin_bottom = 25.0
text = "Width"
editable = false

[node name="height" type="HScrollBar" parent="Control"]
margin_left = 263.0
margin_top = 248.0
margin_right = 463.0
margin_bottom = 273.0
value = 10.0

[node name="hn" type="SpinBox" parent="Control/height"]
margin_left = -73.0
margin_right = 1.0
margin_bottom = 25.0

[node name="hnt" type="LineEdit" parent="Control/height"]
margin_left = -134.0
margin_right = -74.0
margin_bottom = 25.0
text = "Height"
editable = false

[node name="depth" type="HScrollBar" parent="Control"]
margin_left = 263.0
margin_top = 278.0
margin_right = 463.0
margin_bottom = 303.0
value = 10.0

[node name="dn" type="SpinBox" parent="Control/depth"]
margin_left = -73.0
margin_right = 1.0
margin_bottom = 25.0

[node name="dnt" type="LineEdit" parent="Control/depth"]
margin_left = -134.0
margin_right = -74.0
margin_bottom = 25.0
text = "Depth"
editable = false

[node name="colorpicker" type="ColorPickerButton" parent="Control"]
margin_left = 137.0
margin_top = 328.0
margin_right = 197.0
margin_bottom = 382.0
color = Color( 0.352941, 0.509804, 0.666667, 1 )

[node name="TextEdit" type="TextEdit" parent="Control"]
margin_left = 213.0
margin_top = 336.0
margin_right = 464.0
margin_bottom = 376.0
script = ExtResource( 4 )

[node name="sboxlist" type="ScrollContainer" parent="Control"]
margin_top = 50.0
margin_right = 110.0
margin_bottom = 750.0
rect_min_size = Vector2( 110, 700 )
rect_clip_content = false

[node name="singleboxes" type="VBoxContainer" parent="Control/sboxlist"]
margin_right = 100.0
margin_bottom = 700.0
rect_min_size = Vector2( 100, 700 )
script = ExtResource( 2 )

[node name="Spatial" type="Spatial" parent="."]

[node name="CSGBox" type="CSGBox" parent="Spatial"]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 50 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox9" type="CSGBox" parent="Spatial"]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 50 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox4" type="CSGBox" parent="Spatial"]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, -50 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox10" type="CSGBox" parent="Spatial"]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, -50 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox2" type="CSGBox" parent="Spatial"]
transform = Transform( -4.37114e-06, 0, 1, 0, 1, 0, -100, 0, -4.37114e-08, 50, -50, 0 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox11" type="CSGBox" parent="Spatial"]
transform = Transform( -4.37114e-06, 0, 1, 0, 1, 0, -100, 0, -4.37114e-08, 50, 50, 0 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox3" type="CSGBox" parent="Spatial"]
transform = Transform( -4.37114e-06, 0, 1, 0, 1, 0, -100, 0, -4.37114e-08, -50, -50, 0 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox12" type="CSGBox" parent="Spatial"]
transform = Transform( -4.37114e-06, 0, 1, 0, 1, 0, -100, 0, -4.37114e-08, -50, 50, 0 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox5" type="CSGBox" parent="Spatial"]
transform = Transform( -4.37114e-06, -1, 0, 100, -4.37114e-08, 0, 0, 0, 1, -50, 0, 50 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox6" type="CSGBox" parent="Spatial"]
transform = Transform( -4.37114e-06, -1, 0, 100, -4.37114e-08, 0, 0, 0, 1, 50, 0, 50 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox7" type="CSGBox" parent="Spatial"]
transform = Transform( -4.37114e-06, -1, 0, 100, -4.37114e-08, 0, 0, 0, 1, 50, 0, -50 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="CSGBox8" type="CSGBox" parent="Spatial"]
transform = Transform( -4.37114e-06, -1, 0, 100, -4.37114e-08, 0, 0, 0, 1, -50, 0, -50 )
cast_shadow = 2
lightmap_scale = 3
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 4 )

[node name="Spatial" type="Spatial" parent="Spatial"]

[node name="Label3D" type="Label3D" parent="Spatial/Spatial"]
transform = Transform( 500, 0, 0, 0, 500, 0, 0, 0, 1, 0, -57, 50 )
pixel_size = 0.001
outline_modulate = Color( 1, 1, 1, 1 )
text = "Panorering"
uppercase = true

[node name="CSGBox" type="CSGBox" parent="Spatial/Spatial/Label3D"]
transform = Transform( 0.00634371, 0, 0, 0, 0.00140899, 0, 0, 0, 0.0304983, -0.0511585, 0.000602372, 0 )
material = SubResource( 5 )

[node name="CSGBox2" type="CSGBox" parent="Spatial/Spatial/Label3D"]
transform = Transform( 0.00391378, -0.000696335, 0, 0.00349159, 0.000780534, 0, 0, 0, 0.03, -0.05569, 0.00266405, 0.0250015 )
width = 1.65268
material = SubResource( 5 )

[node name="CSGBox3" type="CSGBox" parent="Spatial/Spatial/Label3D"]
transform = Transform( 0.00370869, 0.000739634, 0, -0.00370869, 0.000739634, 0, 0, 0, 0.03, -0.05569, -0.00203191, 0.0250015 )
width = 1.65268
material = SubResource( 5 )

[node name="CSGBox4" type="CSGBox" parent="Spatial/Spatial/Label3D"]
transform = Transform( -0.00634351, 1.12383e-05, 0, -5.05982e-05, -0.00140895, 0, 0, 0, 0.0304983, 0.0510035, 0.000664227, 0 )
material = SubResource( 5 )

[node name="CSGBox5" type="CSGBox" parent="Spatial/Spatial/Label3D"]
transform = Transform( -0.0038858, 0.000702539, 0, -0.00352269, -0.000774955, 0, 0, 0, 0.03, 0.0555514, -0.00136124, 0.0250015 )
width = 1.65268
material = SubResource( 5 )

[node name="CSGBox6" type="CSGBox" parent="Spatial/Spatial/Label3D"]
transform = Transform( -0.00373816, -0.000733711, 0, 0.003679, -0.00074551, 0, 0, 0, 0.03, 0.0555139, 0.00333456, 0.0250015 )
width = 1.65268
material = SubResource( 5 )

[node name="Label3D3" type="Label3D" parent="Spatial/Spatial"]
transform = Transform( 500, 0, 0, 0, 500, 0, 0, 0, 1, 0, -60.9976, -61.4747 )
pixel_size = 0.001
outline_modulate = Color( 1, 1, 1, 1 )
text = "Dybde"
uppercase = true
autowrap = true

[node name="CSGBox7" type="CSGBox" parent="Spatial/Spatial/Label3D3"]
transform = Transform( -2.77292e-10, -0.00140899, 0, 0.00138957, -1.34908e-11, 5.9515e-05, -3.09483, 3.00466e-08, 0.00668049, 0.000183604, -0.00943733, 28.4958 )
material = SubResource( 5 )

[node name="CSGBox8" type="CSGBox" parent="Spatial/Spatial/Label3D3"]
transform = Transform( -0.0037747, -0.000726232, 0, 0.000797653, -0.000164897, 5.85426e-05, -1.77653, 0.367257, 0.00657133, -0.00221079, -0.0104362, 30.7206 )
width = 1.65268
material = SubResource( 5 )

[node name="CSGBox9" type="CSGBox" parent="Spatial/Spatial/Label3D3"]
transform = Transform( 0.0037087, -0.000739633, 0, 0.000812374, 0.000162014, 5.85426e-05, -1.80931, -0.360835, 0.00657133, 0.00248471, -0.0104218, 30.6882 )
width = 1.65268
material = SubResource( 5 )

[node name="CSGBox10" type="CSGBox" parent="Spatial/Spatial/Label3D3"]
transform = Transform( -7.97133e-06, 0.00140899, 0, -0.00138956, -3.87822e-07, 5.9515e-05, 3.09482, 0.000863753, 0.00668049, 8.74571e-05, -0.00348981, 15.2494 )
material = SubResource( 5 )

[node name="CSGBox11" type="CSGBox" parent="Spatial/Spatial/Label3D3"]
transform = Transform( 0.00377011, 0.000727176, 0, -0.000798692, 0.000164697, 5.85427e-05, 1.77884, -0.366811, 0.00657136, 0.00248759, -0.00249154, 13.0261 )
width = 1.65268
material = SubResource( 5 )

[node name="CSGBox12" type="CSGBox" parent="Spatial/Spatial/Label3D3"]
transform = Transform( -0.00371334, 0.000738702, 0, -0.000811352, -0.000162217, 5.85427e-05, 1.80704, 0.361288, 0.00657136, -0.00220792, -0.0025048, 13.0556 )
width = 1.65268
material = SubResource( 5 )

[node name="Label3D2" type="Label3D" parent="Spatial/Spatial"]
transform = Transform( 500.317, 0, 0, 0, 500.317, 0, 0, 0, 1.00063, 57, 0, 50 )
pixel_size = 0.001
outline_modulate = Color( 1, 1, 1, 1 )
text = "Hz"
uppercase = true
autowrap = true
width = 100.0

[node name="CSGBox" type="CSGBox" parent="Spatial/Spatial/Label3D2"]
transform = Transform( -2.77116e-10, -0.0014081, 0, 0.00633969, -6.15499e-11, 0, 0, 0, 0.0304789, -0.000124112, -0.0135023, -0.000202179 )
material = SubResource( 5 )

[node name="CSGBox2" type="CSGBox" parent="Spatial/Spatial/Label3D2"]
transform = Transform( -0.0037723, -0.000725771, 0, 0.00363918, -0.000752319, 0, 0, 0, 0.0299809, -0.00251698, -0.0180596, 0.0247993 )
width = 1.65268
material = SubResource( 5 )

[node name="CSGBox3" type="CSGBox" parent="Spatial/Spatial/Label3D2"]
transform = Transform( 0.00370634, -0.000739163, 0, 0.00370634, 0.000739164, 0, 0, 0, 0.0299809, 0.00217554, -0.0179933, 0.024807 )
width = 1.65268
material = SubResource( 5 )

[node name="CSGBox4" type="CSGBox" parent="Spatial/Spatial/Label3D2"]
transform = Transform( -7.96627e-06, 0.0014081, 0, -0.00633968, -1.76938e-06, 0, 0, 0, 0.0304789, -0.000220194, 0.0136328, -0.000202179 )
material = SubResource( 5 )

[node name="CSGBox5" type="CSGBox" parent="Spatial/Spatial/Label3D2"]
transform = Transform( 0.00376772, 0.000726715, 0, -0.00364392, 0.000751406, 0, 0, 0, 0.029981, 0.00217842, 0.0181871, 0.0247993 )
width = 1.65268
material = SubResource( 5 )

[node name="CSGBox6" type="CSGBox" parent="Spatial/Spatial/Label3D2"]
transform = Transform( -0.00371099, 0.000738234, 0, -0.00370168, -0.000740092, 0, 0, 0, 0.029981, -0.00251411, 0.0181267, 0.024807 )
width = 1.65268
material = SubResource( 5 )

[connection signal="coloreschangerus" from="." to="Control/sboxlist/singleboxes" method="_on_Spatial_coloreschangerus"]
[connection signal="namechanged" from="." to="Control/sboxlist/singleboxes" method="_on_Spatial_namechanged"]
[connection signal="newlistitem" from="." to="Control/sboxlist/singleboxes" method="_on_Spatial_newlistitem"]
[connection signal="pressed" from="Control/newboxbutton" to="." method="_on_newboxbutton_pressed"]
[connection signal="value_changed" from="Control/x" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="Control/x/xn" to="." method="_on_xn_value_changed"]
[connection signal="value_changed" from="Control/y" to="." method="_on_y_value_changed"]
[connection signal="value_changed" from="Control/y/yn" to="." method="_on_yn_value_changed"]
[connection signal="value_changed" from="Control/z" to="." method="_on_z_value_changed"]
[connection signal="value_changed" from="Control/z/zn" to="." method="_on_zn_value_changed"]
[connection signal="value_changed" from="Control/width" to="." method="_on_width_value_changed"]
[connection signal="value_changed" from="Control/width/wn" to="." method="_on_wn_value_changed"]
[connection signal="value_changed" from="Control/height" to="." method="_on_height_value_changed"]
[connection signal="value_changed" from="Control/height/hn" to="." method="_on_hn_value_changed"]
[connection signal="value_changed" from="Control/depth" to="." method="_on_depth_value_changed"]
[connection signal="value_changed" from="Control/depth/dn" to="." method="_on_dn_value_changed"]
[connection signal="color_changed" from="Control/colorpicker" to="." method="_on_colorpicker_color_changed"]
[connection signal="text_changed" from="Control/TextEdit" to="Control/TextEdit" method="_on_TextEdit_text_changed"]
[connection signal="textchange" from="Control/TextEdit" to="." method="_on_TextEdit_textchange"]
[connection signal="listcolorchanged" from="Control/sboxlist/singleboxes" to="." method="_on_singleboxes_listcolorchanged"]
